[material] -> add new api: getAllMaterial
