# DBMS_project/backend/swagger_output.json
@@ -185,11 +185,34 @@
     "/material/getAllMaterials": {
       "post": {
         "tags": [
-          "Unfinished"
+          "Material"
         ],
         "description": "",
-        "parameters": [],
-        "responses": {}
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "userId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "409": {
+            "description": "使用者或原料不存在"
+          }
+        }
       }
     },
     "/material/getMaterialHistory": {
